update on symbol def

--- a/template.tex
+++ b/template.tex
@@ -38,7 +38,7 @@
 
 \input{preamble}
 \input{myfonts}
-\input{mydefine}
+\input{my-symbols-def}
 \input{mathdefine}
 \usepackage{longtable} % only for template; not usually to be used in PAPERs
 
