--- a/title-Lecture-Note.tex
+++ b/title-Lecture-Note.tex
@@ -15,7 +15,7 @@
 \noindent
 \begin{tabular*}{\linewidth}{lc@{\extracolsep{\fill}}r@{\extracolsep{0pt}}}
 \ifthenelse{\boolean{pdflatex}}% Logo format choice
-{\vspace*{-1.2cm}\mbox{\!\!\!\includegraphics[width=.14\textwidth]{figs/tuhep-logo.pdf}} & &}%
+{\vspace*{-1.2cm}\mbox{\!\!\!\includegraphics[width=.14\textwidth]{figs/tuhep-logo}} & &}%
 {\vspace*{-1.2cm}\mbox{\!\!\!\includegraphics[width=.12\textwidth]{logo.png}} & &}
 
  \\
