--- a/lhcb-symbols-list.tex
+++ b/lhcb-symbols-list.tex
@@ -5,12 +5,24 @@
 \subsection{Experiments}
 \subsection{perline = 1}
 \begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}l@{\extracolsep{0.5cm}}l@{\extracolsep{\fill}}l@{\extracolsep{0.5cm}}l@{\extracolsep{\fill}}l@{\extracolsep{0.5cm}}l}
-\texttt{\textbackslash lhcb} & \lhcb & \texttt{\textbackslash atlas} & \atlas & \texttt{\textbackslash cms} & \cms \\
-\texttt{\textbackslash alice} & \alice & \texttt{\textbackslash babar} & \babar & \texttt{\textbackslash belle} & \belle \\
-\texttt{\textbackslash cleo} & \cleo & \texttt{\textbackslash cdf} & \cdf & \texttt{\textbackslash dzero} & \dzero \\
-\texttt{\textbackslash aleph} & \aleph & \texttt{\textbackslash delphi} & \delphi & \texttt{\textbackslash opal} & \opal \\
-\texttt{\textbackslash lthree} & \lthree & \texttt{\textbackslash sld} & \sld & \texttt{\textbackslash cern} & \cern \\
-\texttt{\textbackslash lhc} & \lhc & \texttt{\textbackslash lep} & \lep & \texttt{\textbackslash tevatron} & \tevatron \\
+\texttt{\textbackslash lhcb} & \lhcb \\
+\texttt{\textbackslash atlas} & \atlas \\
+\texttt{\textbackslash cms} & \cms \\
+\texttt{\textbackslash alice} & \alice \\
+\texttt{\textbackslash babar} & \babar \\
+\texttt{\textbackslash belle} & \belle \\
+\texttt{\textbackslash cleo} & \cleo \\
+\texttt{\textbackslash cdf} & \cdf \\
+\texttt{\textbackslash dzero} & \dzero \\
+\texttt{\textbackslash aleph} & \aleph \\
+\texttt{\textbackslash delphi} & \delphi \\
+\texttt{\textbackslash opal} & \opal \\
+\texttt{\textbackslash lthree} & \lthree \\
+\texttt{\textbackslash sld} & \sld \\
+\texttt{\textbackslash cern} & \cern \\
+\texttt{\textbackslash lhc} & \lhc \\
+\texttt{\textbackslash lep} & \lep \\
+\texttt{\textbackslash tevatron} & \tevatron \\
 \end{tabular*}
 
 \subsubsection{LHCb sub-detectors and sub-systems}
