--- a/my-symbols-list.tex
+++ b/my-symbols-list.tex
@@ -9,3 +9,8 @@
 \texttt{\textbackslash diracGammaMatrix[1] \textbackslash diracGammaMatrix\{0\}} & \diracGammaMatrix{0} \\
 \end{tabular*}
 
+\subsection{未分类}
+\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}l@{\extracolsep{0.5cm}}l@{\extracolsep{\fill}}l@{\extracolsep{0.5cm}}l@{\extracolsep{\fill}}l@{\extracolsep{0.5cm}}l}
+\texttt{\textbackslash C} & \C & \texttt{\textbackslash P} & \P & \texttt{\textbackslash T} & \T \\
+\end{tabular*}
+
