make Makefile more friendly

--- a/template.tex
+++ b/template.tex
@@ -47,9 +47,9 @@
 \newtheorem{exm}{例}[section]
 \newtheorem{rem}{注}[section]
 \newtheorem{prop}{命题}[section]
-%\newtheorem{exercises}{习题}[chapter]
+\newtheorem{exercise}{习题}[section]
+\newtheorem{solution}{解}[section]
 %\newtheorem{examples}{例}[chapter]
-%\newtheorem*{sltn}{解}
 
 
 %\lstset{language=C++}%这条命令可以让LaTeX排版时将C++键字突出显示
