--- a/chapter4.tex
+++ b/chapter4.tex
@@ -27,6 +27,7 @@
 \usepackage{mciteplus}
 \usepackage{lineno}
 \usepackage{xpinyin}
+\usepackage{comment}
 
 \renewcommand{\baselinestretch}{1.6}
 %\usepackage{setspace}\linestretch{1.6}
@@ -46,7 +47,6 @@
 %\setboolean{inbibliography}{false} %True once you enter the bibliography
 
 \input{preamble}
-\input{myfonts}
 \input{my-symbols-def}
 \input{mathdefine}
 \usepackage{longtable} % only for template; not usually to be used in PAPERs
@@ -82,7 +82,7 @@
 % Title --------------------------------------------------
 {\bf\boldmath\huge
 \begin{center}
-    Symbol definition for writing notes
+    第4章
 \end{center}
 }
 
