--- a/my-symbols-def.tex
+++ b/my-symbols-def.tex
@@ -4,16 +4,43 @@
 % Field theory
 %%%%% perline = 1
 %%%%%%%%%%%%%
+\newcommand{\VolumeUnit}[2]{\ensuremath{\frac{d^3\vec{#1}}{sqrt{2\pi^3}#2_{#1}}} } %{k}{\omega}
 \newcommand{\diracgamma}[1]{\ensuremath{\gamma^{#1}}\xspace}   % {1}
 \newcommand{\diracGamma}[1]{\ensuremath{\gamma_{#1}}\xspace}   % {1}
-\newcommand{\diracGammaMatrix}[1]{                             % {0}
+\newcommand{\diracgammaMatrix}[1]{                             % {0}
     \ifthenelse{#1=0}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&-1&0\end{pmatrix}}}{}
-        \ifthenelse{#1=1}{\ensuremath{\begin{pmatrix}0&0&0&1\\0&0&1&0\\0&-1&0&0\\-1&0&0&-1\end{pmatrix}}}{}
-            \ifthenelse{#1=2}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
-                \ifthenelse{#1=3}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
-                    }
+    \ifthenelse{#1=1}{\ensuremath{\begin{pmatrix}0&0&0&1\\0&0&1&0\\0&-1&0&0\\-1&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=2}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=3}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=5}{\ensuremath{\begin{pmatrix}0&0&1&0\\0&0&0&1\\1&0&0&0\\0&1&0&0\end{pmatrix}}}{}
+}
+\newcommand{\diracGammaMatrix}[1]{                             % {0}
+    \ifthenelse{#1=0}{\ensuremath{\begin{pmatrix}-1&0&0&0\\0&-1&0&0\\0&0&0&1\\0&0&1&0\end{pmatrix}}}{}
+    \ifthenelse{#1=1}{\ensuremath{\begin{pmatrix}0&0&0&1\\0&0&1&0\\0&-1&0&0\\-1&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=2}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=3}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=5}{\ensuremath{\begin{pmatrix}0&0&1&0\\0&0&0&1\\1&0&0&0\\0&1&0&0\end{pmatrix}}}{}
+}
+\newcommand{\weylgammaMatrix}[1]{                             % {0}
+    \ifthenelse{#1=0}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&-1&0\end{pmatrix}}}{}
+    \ifthenelse{#1=1}{\ensuremath{\begin{pmatrix}0&0&0&1\\0&0&1&0\\0&-1&0&0\\-1&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=2}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
+    \ifthenelse{#1=3}{\ensuremath{\begin{pmatrix}1&0&0&0\\0&1&0&0\\0&0&0&-1\\0&0&0&-1\end{pmatrix}}}{}
+}
+
+% Tensors
+\newcommand{\bivector}[2]{\ensuremath{#1^{#2}}\xspace} %{x}{\mu}
+\newcommand{\bibivector}[3]{\ensuremath{#1^{#2#3}}\xspace} %{x}{\mu}
+\newcommand{\covector}[2]{\ensuremath{#1_{#2}}\xspace} %{x}{\mu}
+\newcommand{\cocovector}[3]{\ensuremath{#1_{#2#3}}\xspace} %{x}{\mu}
 
 % 未分类
 \def\C {\ensuremath{\textbf{C}}}
 \def\P {\ensuremath{\textbf{P}}}
 \def\T {\ensuremath{\textbf{T}}}
+\newcommand{\UC}{\ensuremath{U_{C}}\xspace}
+\newcommand{\invUC}{\ensuremath{U_{C}^{-1}}\xspace}
+\newcommand{\Up}{U_{P}}
+\newcommand{\invUp}{U_{P}^{-1}}
+\newcommand{\Ut}{U_{T}}
+\newcommand{\invUt}{U_{T}^{-1}}
