--- a/chapter4-remark.tex
+++ b/chapter4-remark.tex
@@ -1,13 +1,16 @@
 \section{Introduction}
 本章给出了在相对论性量子理论中的\C \P \T 定义。
 包括场的量子化等
+
 \section{记号}
 在这个注中，我使用与书中不同的记号来写注记
 
+自然单位制
 \begin{equation}
     c = \hbar = 1
 \end{equation}
 
+度规
 \begin{equation}
     \cocovector g \mu \nu = \mathrm{diag}[-1, 1, 1, 1]
 \end{equation}
@@ -30,6 +33,7 @@
     \covector p \mu = (-E, \vec p)
 \end{equation}
 
+偏导数
 \begin{equation}
     \bivector \partial \mu = \frac \partial {\partial \covector x \mu}
 \end{equation}
@@ -43,40 +47,48 @@
 \end{equation}
 
 Dirac matrices
-
-\diracgamma 5 = i \diracgamma 0 \diracgamma 1 \diracgamma 2 \diracgamma 3 \diracgamma 4
+\begin{equation}
+    \diracgamma 5 = i \diracgamma 0 \diracgamma 1 \diracgamma 2 \diracgamma 3 \diracgamma 4
+\end{equation}
 
 %\section{自由场}
+
 \section{Spin-0场的量子化及其\C \P \T}
 \subsection{实标量场量子化}
 为了讨论复标量场，不妨先从实标量场入手
 
 把Klein-Gordon场方程的解展开
 \begin{equation}
-    \phi(t, \vec x) = \int \VolumeUnit k \omega \left[ a(k) e^{i\vec k \cdot \vec x - \i\omega_k t} + a^*(k)e^{-i\vec k \cdot \vec x + i \omega_k t} \right]
-    \equiv \int d^3\vec k = \left[a(k)f_k(x) + a^*(k)f_k^*(x)\right]
+    \begin{array}{ccc}
+        \phi(t, \vec x) &=& \int \VolumeUnit k \omega \left[ a(k) e^{i\vec k \cdot \vec x - \i\omega_k t} + a^*(k)e^{-i\vec k \cdot \vec x + i \omega_k t} \right] \\
+        &\equiv& \int d^3\vec k = \left[a(k)f_k(x) + a^*(k)f_k^*(x)\right]
+    \end{array}
 \end{equation}
 量子化过程即将上式写成算符
 \begin{equation}
-    \phi(t, \vec x) = \int \VolumeUnit k \omega \left[ a(k) e^{i\vec k \cdot \vec x - \i\omega_k t} + a^\dagger(k)e^{-i\vec k \cdot \vec x + i \omega_k t} \right]
-    \equiv \int d^3\vec k = \left[a(k)f_k(x) + a^\dagger(k)f_k^\dagger(x)\right]
+    \begin{array}{ccc}
+        \phi(t, \vec x) &=& \int \VolumeUnit k \omega \left[ a(k) e^{i\vec k \cdot \vec x - \i\omega_k t} + a^\dagger(k)e^{-i\vec k \cdot \vec x + i \omega_k t} \right] \\
+        &\equiv& \int d^3\vec k = \left[a(k)f_k(x) + a^\dagger(k)f_k^\dagger(x)\right]
+    \end{array}
 \end{equation}
 同时，正则动量可以求出
 \begin{equation}
-    \pi(t, \vec x) = \dot \phi(t, x) = \int \VolumeUnit k \omega \left[ i\omega_k a(k) e^{i\vec k \cdot \vec x - \i\omega_k t} - i\omega_k a^\dagger(k)e^{-i\vec k \cdot \vec x + i \omega_k t} \right]
-    \equiv \int d^3\vec k = \left[a(k)f_k(x) + a^\dagger(k)f_k^\dagger(x)\right]
-\end{equation}
+    \begin{array}{ccc}
+        \pi(t, \vec x) &=& \dot \phi(t, x) = \int \VolumeUnit k \omega \left[ i\omega_k a(k) e^{i\vec k \cdot \vec x - \i\omega_k t} - i\omega_k a^\dagger(k)e^{-i\vec k \cdot \vec x + i \omega_k t} \right] \\
+        &\equiv& \int d^3\vec k = \left[a(k)f_k(x) + a^\dagger(k)f_k^\dagger(x)\right]
+    \end{array}
+    \end{equation}
 
-可以推出
-\begin{equation}
-    a(k) = i \int d^3 \vec x f_k^*\partial_0\phi
-\end{equation}
-\begin{equation}
-    a^\dagger(k) = -i \int d^3 \vec x f_k\partial_0\phi
-\end{equation}
-为了保持洛仑兹协变性
-\begin{equation}
-\ket {\vec k} = \sqrt{(2\pi)^32E_{\vec k)}} a^\dagger(\vec k)\ket{0}
+    可以推出
+    \begin{equation}
+        a(k) = i \int d^3 \vec x f_k^*\partial_0\phi
+    \end{equation}
+    \begin{equation}
+        a^\dagger(k) = -i \int d^3 \vec x f_k\partial_0\phi
+    \end{equation}
+    为了保持洛仑兹协变性
+    \begin{equation}
+    \ket {\vec k} = \sqrt{(2\pi)^32E_{\vec k)}} a^\dagger(\vec k)\ket{0}
 \end{equation}
 
 \subsection{复标量场量子化}
@@ -107,7 +119,7 @@ Dirac matrices
         \UC a_{\vec k}^\dagger \invUC &=& \eta_C^* b_{\vec k}^\dagger \\
         \UC b_{\vec k} \invUC &=& \eta_C^* a_{\vec k} \\
         \UC b_{\vec k}\dagger \invUC &=& \eta_C a_{\vec k}^\dagger \\
-\end{array}
+    \end{array}
 \end{equation}
 对于实标量场，可得
 \begin{equation}
@@ -121,31 +133,127 @@ Dirac matrices
 在\P 变换下，复标量场的变化就应该是
 \begin{equation}
     \UP\phi(t,\vec x)\invUP = \eta_P\phi(t,-\vec x)
-    \end{equation}
+\end{equation}
 \begin{equation}
     \UP\phi\dagger(t,\vec x)\invUP = \eta_P^*\phi\dagger(t,-\vec x)
-    \end{equation}
-    同样，对于实标量场
+\end{equation}
+同样，对于实标量场
+\begin{equation}
+    \eta_P = \pm 1
+\end{equation}
+其符号是可进行观测的
+如何进行观测？
+\subsubsection{\T 变换}
+为了讨论\T 变换，先看经典量在\T 变换下的性质
+$E_{\vec p}\rightarrow E_{\vec p}, \vec p\rightarrow \vec p, \vec s\rightarrow-\vec s $
 
-\begin{comment}
-\section{Spin-1场的量子化及其\C \P \T}
+在高等量子力学中仔细地讨论了波函数的时间反演问题，经典Klein-Golden场的时间反演应该表示为
+\begin{equation}
+    \phi(t, x) \rightarrow \phi(t, x)^{\prime} = \eta_T\phi(-t, x)^*
+\end{equation}
+在场量子化之后，变为
+\begin{equation}
+    \UT\phi(t,\vec x)\invUT = \eta_T\phi(-t, x)
+\end{equation}
+可以求得产生湮灭算符的变换关系
+\begin{equation}
+    \begin{array}{ccc}
+        \UT a_{\vec k}\invUT &=& \eta_T a_{-\vec k} \\
+        \UT b_{\vec k}\invUT &=& \eta_T^* a_{-\vec k} \\
+        \UT a_{\vec k}^\dagger\invUT &=& \eta_T a_{-\vec k}^\dagger \\
+        \UT b_{\vec k}^\dagger\invUT &=& \eta_T^* a_{-\vec k}^\dagger \\
+    \end{array}
+\end{equation}
+
+%为了讨论\T 变换，先写出Schrodinger方程
+%\begin{equation}
+    %H\ket{\psi} = i\hbar\frac \partial {\partial t} \ket{\psi}
+%\end{equation}
+%此处的\ket{t}与表象有关，当作波函数对待
+%先尝试一种错误的\C 变换方法:
+%\tilde H = \UT H \invUT
+%\tilde 
+
+\section{自由Dirac场的量子化}
+dirac方程对应的拉式量密度为
+\begin{equation}
+    L = \bar \psi(i\diracslash \partial - m)\psi = 0
+\end{equation}
+注意到这里的$\diracslash \partial$是作用在右边的，$\bar \psi$和$\psi$的地位实际上并不等同。
+正则动量
+\begin{equation}
+    \psi_\alpha = \frac {\partial L} {partial \dot{\psi_alpha}} = i\psi_\alpha^\dagger
+\end{equation}
+\begin{equation}
+    H = \pi \dot{\psi} - L = \psi^\dagger(-i\vec \alpha \cdot \vec \nabla + \beta m)\psi
+\end{equation}
+场方程按平面波展开为
+\begin{equation}
+    \psi(x) = \int \VolumeUnit p E \sum_{\pm s} \left[b(p, s)u(p, s)e^{-ipx} + d^dagger(p,s)v(p,s)e^{+ipx}\right]
+\end{equation}
+
+\subsection{自由Dirac场的\C \P \T}
+\subsection{\C 变换}
+在Dirac场中，可以定义
+\begin{equation}
+    \UC \psi(x) \invUC = \eta_C \C \bar \psi^T(x)
+\end{equation}
+这个定义的实际意思应该解释为
+\begin{equation}
+    \begin{array}{ccc}
+        \UC b_{\vec k}^s\invUC &=& \eta_C d_{\vec k}^s \\
+        \UC b_{\vec k}^{s\dagger}\invUC &=& \eta_C d_{\vec k}^s \\
+        \UC b_{\vec k}^s\invUC &=& \eta_C d_{\vec k}^s \\
+        \UC b_{\vec k}^s\invUC &=& \eta_C d_{\vec k}^s \\
+    \end{array}
+\end{equation}
+
+Dirac场的双线性项在\C 变换下变化规律如下
+\begin{table}[h]
+    \caption{Dirac场的双线性项变化}
+    \centering
+    \begin{tabular}{cccccc}
+        & $\bar \psi$ & $\bar \psi \covector \gamma \mu \psi$ & $\bar \psi \covector \gamma \mu \covector \gamma \nu \psi$ &
+        $\bar \psi \diracGamma \mu \diracGamma 5 \psi$ & $\bar \psi \diracGamma 5 \psi$ \\
+        $\eta_C$ & +1 & -1 & -1 & +1 & +1
+    \end{tabular}
+\end{table}
+
+\subsection{\P 变换}
+Dirac波函数在宇称变换下应该表示为
+\begin{equation}
+    \Psi(t, \vec x) \rightarrow \Psi^\prime(t, \vec x) = \eta_P \diracGamma 0 \Psi(t, -\vec x)
+\end{equation}
+因此在Dirac场算符的情况下，
+应该有
+\begin{equation}
+    \UP \Psi_\alpha(t, \vec x) \invUP = \eta_P \diracgamma{0}_{\alpha\beta} \Psi_\beta(t, -\vec x)
+\end{equation}
+
+于是可以得到
+
+\subsection{\T 变换}
+
+
+
+\section{电磁场的量子化及其\C \P \T}
 Maxwell 方程组可以写作
 \begin{equation}
-    \covector \partial \mu \bibivector F \mu \v = e \bivector J \nu
+    \covector \partial \mu \bibivector F \mu \nu = e \bivector J \nu
 \end{equation}
 其中
 \begin{equation}
-    \bibivector F \mu \nu = \FuvExpand
+    \bibivector F \mu \nu = 
     \bibivector F \mu \nu \equiv \bivector \partial \mu \bivector A \nu 
     - \bivector \partial \nu \bivector A \mu
 \end{equation}
 
 \begin{equation}
-    \L = \EMLagrangianExpand
+    L = \frac 1 4 
 \end{equation}
 由于规范问题，电动力学不能直接量子化，采用库仑规范
 \begin{equation}
-    \CoulombGaugeCondition
+    \
 \end{equation}
 
 那么，$\vec A$的正则动量就是：
@@ -154,4 +262,23 @@ Maxwell 方程组可以写作
     -\frac \partial {\partial t} \vec A (t, \vec x) - \vec \nabla A_0 = \vec E
 \end{equation}
 
-\end{comment}
+
+\section{有质量spin-1场的量子化及其\C \P \T}
+拉式量可以写作
+\begin{equation}
+    L = - \frac 1 4 \bibivector F \mu \nu \cocovector F \mu \nu + \frac 1 2 m^2 \covector A \mu \bivector A \mu
+\end{equation}
+可以得到Proca方程
+\begin{equation}
+    \covector \partial \mu \bibivector F \mu nu + m^2 \bivector A \nu = 0
+\end{equation}
+有质量矢量场应该有3个独立的分量
+引入拉式乘子
+\begin{equation}
+    L = -\frac 1 4 \cocovector F \mu \nu \cocovector F \mu \nu + \frac 1 2 m^2 \covector A \mu \bivector A \mu - \frac \xi 2 (\bivector \partial \mu \cocovector A \mu)^2
+\end{equation}
+运动方程可以得到
+\begin{equation}
+    \xi()
+\end{equation}
+
