--- a/chapter5.tex
+++ b/chapter5.tex
@@ -72,7 +72,7 @@
 {\vspace*{-1.2cm}\mbox{\!\!\!\includegraphics[width=.12\textwidth]{figs/logo.png}} & &}
 
  \\
- & & Chapter 3 \\  % ID 
+ & & Chapter 4 \\  % ID 
  & & \today \\ % Date - Can also hardwire e.g.: 23 March 2010
  & & version 0.1\\
 \hline
@@ -84,7 +84,7 @@
 {\bf\boldmath\huge
 \begin{center}
     %\maketitle
-    第3章 \\
+    第5章 \\
     \today
 \end{center}
 }
@@ -95,8 +95,8 @@
 \newpage
 \setcounter{page}{1}
 \part{注记}
-\input{chapter3-remark}
+\input{chapter5-remark}
 
 \part{习题与解答}
-%\input{chapter3-solution}
+\input{chapter4-solution}
 \end{document}
