--- a/my-symbols-def.tex
+++ b/my-symbols-def.tex
@@ -5,6 +5,7 @@
 %%%%% perline = 1
 %%%%%%%%%%%%%
 \newcommand{\VolumeUnit}[2]{\ensuremath{\frac{d^3\vec{#1}}{sqrt{2\pi^3}#2_{#1}}} } %{k}{\omega}
+\newcommand{\diracslash}[1]{\ensuremath{#1\!\!\!/}} %{\partial}
 \newcommand{\diracgamma}[1]{\ensuremath{\gamma^{#1}}\xspace}   % {1}
 \newcommand{\diracGamma}[1]{\ensuremath{\gamma_{#1}}\xspace}   % {1}
 \newcommand{\diracgammaMatrix}[1]{                             % {0}
@@ -40,7 +41,7 @@
 \def\T {\ensuremath{\textbf{T}}}
 \newcommand{\UC}{\ensuremath{U_{C}}\xspace}
 \newcommand{\invUC}{\ensuremath{U_{C}^{-1}}\xspace}
-\newcommand{\Up}{U_{P}}
-\newcommand{\invUp}{U_{P}^{-1}}
-\newcommand{\Ut}{U_{T}}
-\newcommand{\invUt}{U_{T}^{-1}}
+\newcommand{\UP}{\ensuremath{U_{P}}\xspace}
+\newcommand{\invUP}{\ensuremath{U_{P}^{-1}\xspace} }
+\newcommand{\UT}{\ensuremath{U_{T}}\xspace }
+\newcommand{\invUT}{\ensuremath{U_{T}^{-1}}\xspace}
