--- a/template.tex
+++ b/template.tex
@@ -37,7 +37,7 @@
 %\setboolean{inbibliography}{false} %True once you enter the bibliography
 
 \input{preamble}
-\input{myfonts}
+%\input{myfonts}
 \input{my-symbols-def}
 \input{mathdefine}
 \usepackage{longtable} % only for template; not usually to be used in PAPERs
